Enter text and display inside box section works

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
 }
 
 #hide-this-box{
-	background-color:green;
+	background-color:yellow;
 }
 #my-table2 th,  #my-table2 td {
 	border:1px solid cyan;
